more work on dissertation

--- a/doc/dissertation/chapter2.tex
+++ b/doc/dissertation/chapter2.tex
@@ -54,7 +54,7 @@
 \section{Low-Order Scheme for Conservation Law Systems}\label{sec:low_order_system}
 %===============================================================================
 \input{content/low_order/intro_system}
-\subsection{Invariant Domains\label{sec:invariant_domains}}
+\subsection{Invariant Domain\label{sec:invariant_domain}}
   \input{content/low_order/invariant_domain}
 \subsection{Low-Order System\label{sec:low_order_scheme_system}}
   \input{content/low_order/low_order_scheme_system}
@@ -62,6 +62,7 @@
 \section{High-Order Scheme for Scalar Conservation Laws
   \label{sec:high_order_scalar}}  
 %===============================================================================
+\input{content/high_order/intro_scalar}
 \subsection{Entropy Viscosity\label{sec:entropy_viscosity_scalar}}
     \input{content/high_order/entropy_viscosity_scalar}
 \subsection{High-Order System\label{sec:high_order_scheme_scalar}}
@@ -70,6 +71,7 @@
 \section{High-Order Scheme for Conservation Law Systems
   \label{sec:high_order_system}}  
 %===============================================================================
+\input{content/high_order/intro_system}
 \subsection{Entropy Viscosity\label{sec:entropy_viscosity_system}}
     \input{content/high_order/entropy_viscosity_system}
 \subsection{High-Order System\label{sec:high_order_scheme_system}}
