--- a/doc/dissertation/content/low_order/low_order_scheme_system.tex
+++ b/doc/dissertation/content/low_order/low_order_scheme_system.tex
@@ -8,7 +8,10 @@ lumps the mass matrix and adds a low-order artificial diffusion term:
     = \ssrhs_i^n \eqc
 \end{equation}
 where the low-order artificial diffusion matrix $\loworderdiffusionmatrix$
-is given in the following definition:
+is given in the following definition, which is designed in
+\cite{guermond_invariantdomain} to be the smallest amount of artificial
+possible to give the invariant domain property described in Section
+\ref{sec:invariant_domain}:
 %--------------------------------------------------------------------------------
 \begin{definition}{Low-Order Artificial Diffusion Matrix}
    The low-order artificial diffusion matrix $\loworderdiffusionmatrix[\timeindex]$
