--- a/doc/dissertation/content/fct/fct_systems_introduction.tex
+++ b/doc/dissertation/content/fct/fct_systems_introduction.tex
@@ -10,7 +10,7 @@ have knowledge of the extent of the domain itself and thus it cannot
 be translated to solution bounds.
 
 Direct extension of scalar FCT methodology to the systems case is often met
-with poor results because this extension is typically not physcially valid.
+with poor results because this extension is typically not physically valid.
 Kuzmin states that limitation on alternative sets of variables such as
 primitive variables or characteristic variables, rather than conservative
 variables, typically produces better quality FCT results \cite{kuzmin_FCT}.
