--- a/doc/dissertation/content/high_order/entropy_viscosity_scalar.tex
+++ b/doc/dissertation/content/high_order/entropy_viscosity_scalar.tex
@@ -10,7 +10,7 @@ $\entropycellviscosity[\timeindex]$:
    \entropycellviscosity[\timeindex]) \eqc
 \end{equation}
 where the entropy viscosity is defined as
-\begin{equation}
+\begin{equation}\label{eq:entropy_viscosity}
    \entropycellviscosity[\timeindex] = \frac{\entropyresidualcoef
    \entropyresidual_\cellindex^\timeindex
    + \entropyjumpcoef\entropyjump_\cell^\timeindex}
