--- a/doc/dissertation/content/implementation/fct_nonlinear_iteration.tex
+++ b/doc/dissertation/content/implementation/fct_nonlinear_iteration.tex
@@ -1,4 +1,4 @@
-For implicit time discretizations, such as the Theta discretizations
+For implicit time discretizations, such as the Theta discretization
 and steady-state, the FCT algorithm is nonlinear in general because the
 solution bounds are implicit in general.
 However, if one chooses solution bounds that do not depend on the FCT solution,
@@ -73,7 +73,7 @@ bounds:
   \eqp
 \end{equation}
 \end{subequations}
-However, upon convergence the original solution bounds are satisfied because
+However, upon convergence, the original solution bounds are satisfied because
 upon convergence, Equations \eqref{eq:antidiffusion_bounds_ideal} and
 \eqref{eq:antidiffusion_bounds_actual} are equal.
 
