--- a/doc/dissertation/content/implementation/nonlinear_iteration.tex
+++ b/doc/dissertation/content/implementation/nonlinear_iteration.tex
@@ -200,4 +200,5 @@ Right-hand-side &
 \bottomrule\end{tabular}
 \end{table}
 %-------------------------------------------------------------------------------
+\clearpage
 
