--- a/doc/dissertation/content/low_order/intro_system.tex
+++ b/doc/dissertation/content/low_order/intro_system.tex
@@ -3,7 +3,7 @@ of conservation laws since the scalar methodology described in Section
 \ref{sec:low_order_scalar} no longer applies. The low-order
 scheme is adapted from recent work by Guermond \cite{guermond_invariantdomain},
 which focuses on a property called \emph{domain-invariance},
-which is described in Section \ref{sec:invariant_domains}. Section
+which is described in Section \ref{sec:invariant_domain}. Section
 \ref{sec:low_order_scheme_system} summarizes the low-order system.
 In contrast to the scalar case, only explicit Euler and SSPRK time
 discretizations are considered for the system case.
