--- a/doc/dissertation/content/fct/fct_systems_scheme.tex
+++ b/doc/dissertation/content/fct/fct_systems_scheme.tex
@@ -1,6 +1,6 @@
 The general FCT strategy is the same in the systems case as in the scalar
 case. One first defines antidiffusive correction fluxes such that
-\begin{equation}
+\begin{equation}\label{eq:systems_flux_def}
   \lumpedmassentry
     \frac{\solutionvector_i^{H}-\solutionvector_i^n}{\dt}
     + \sum_j\gradiententry\cdot\consfluxinterpolant_j^n
@@ -55,33 +55,57 @@ $\hat{\vectorsolution} = \transformationmatrix^{-1}(\vectorsolution)
 %($\hat{\vectorsolution} = \vectorsolution$), the transformation matrix is the
 %identity matrix: $\transformationmatrix(\vectorsolution)=\mathbb{I}$.
 For example, with the shallow water equations, to transform to the characteristic
-variables, one uses the matrix of right eigenvectors of the Jacobian
+variables, one uses the matrix of right eigenvectors
+$\eigenvectormatrix(\vectorsolution)$ of the Jacobian
 $\jacobianx(\vectorsolution)$ as the transformation matrix:
 $\transformationmatrix(\vectorsolution) = \eigenvectormatrix(\vectorsolution)$.
 Applying a local transformation $\transformationmatrix^{-1}(\solutionvector_i^n)$
-to Equation \eqref{eq:fct_scheme_conservative} gives
+to Equation \eqref{eq:systems_flux_def}
+gives
 \begin{equation}
   \lumpedmassentry
-    \frac{\hat{\solutionvector}_i^{n+1}-\hat{\solutionvector}_i^n}{\dt}
+    \frac{\hat{\solutionvector}_i^{H,n+1}-\hat{\solutionvector}_i^n}{\dt}
     + \sum_j\gradiententry\cdot\hat{\consfluxinterpolant}_j^n
     + \sum_j\diffusionmatrixletter\ij^{L,n}\hat{\solutionvector}_j^n
-    = \hat{\ssrhs}_i^n + \sum_j\limitermatrix\ij\odot\hat{\correctionfluxmatrix}\ij
-    \eqc
+    = \hat{\ssrhs}_i^n
+    + \sumj\hat{\correctionfluxmatrix}\ij
+  \eqc
 \end{equation}
 where accents denote transformed quantities:
 \begin{equation}
-  \hat{\solutionvector}_j^{n+1} = \transformationmatrix^{-1}(\solutionvector_i^n)
-    \solutionvector_j^{n+1} \eqc
+  \hat{\solutionvector}_j^{H,n+1} = \transformationmatrix^{-1}(\solutionvector_i^n)
+    \solutionvector_j^{H,n+1} \eqc
 \end{equation}
 \begin{equation}
   \hat{\solutionvector}_j^n = \transformationmatrix^{-1}(\solutionvector_i^n)
     \solutionvector_j^n \eqc
 \end{equation}
 \begin{equation}
+  \hat{\consfluxinterpolant}_j^n
+   = \transformationmatrix^{-1}(\solutionvector_i^n)
+    \consfluxinterpolant_j^n \eqc
+\end{equation}
+\begin{equation}
+  \hat{\ssrhs}_i^n
+   = \transformationmatrix^{-1}(\solutionvector_i^n)
+    \ssrhs_i^n \eqp
+\end{equation}
+\begin{equation}
   \hat{\correctionfluxmatrix}\ij = \transformationmatrix^{-1}(\solutionvector_i^n)
     \correctionfluxmatrix\ij \eqp
 \end{equation}
-One can then choose the limiting coefficients $\limitermatrix\ij$ to satisfy
+Applying a limiter $\hat{\limitermatrix}$ produces some solution
+$\hat{\solutionvector}_i^{n+1}$:
+\begin{equation}
+  \lumpedmassentry
+    \frac{\hat{\solutionvector}_i^{n+1}-\hat{\solutionvector}_i^n}{\dt}
+    + \sum_j\gradiententry\cdot\hat{\consfluxinterpolant}_j^n
+    + \sum_j\diffusionmatrixletter\ij^{L,n}\hat{\solutionvector}_j^n
+    = \hat{\ssrhs}_i^n
+    + \sum_j\hat{\limitermatrix}\ij\odot\hat{\correctionfluxmatrix}\ij
+    \eqc
+\end{equation}
+One can then choose the limiting coefficients $\hat{\limitermatrix}\ij$ to satisfy
 bounds on the transformed variables: 
 \begin{equation}
   \hat{\solutionbound}_i^- \leq
@@ -92,14 +116,14 @@ Imposition of these bounds corresponds to bounding the transformed antidiffusion
 flux sums:
 \begin{equation}
   \hat{\mathbf{\limitedfluxbound}}^-_i \leq
-  \sum\limits_j \limitermatrix\ij\odot\hat{\correctionfluxmatrix}\ij \leq
+  \sum\limits_j \hat{\limitermatrix}\ij\odot\hat{\correctionfluxmatrix}\ij \leq
   \hat{\mathbf{\limitedfluxbound}}^+_i \eqc
 \end{equation}
 where the bounds are obtained by performing some algebra on the transformed
 system:
 \begin{equation}
   \hat{\mathbf{\limitedfluxbound}}_i^\pm \equiv
-    \lumpedmassentry\frac{\hat{\solutionvector}_i^\pm
+    \lumpedmassentry\frac{\hat{\mathbf{\solutionbound}}_i^\pm
       -\hat{\solutionvector}_i^n}{\dt}
     + \sum_j\gradiententry\cdot\hat{\consfluxinterpolant}_j^n
     + \sum_j\diffusionmatrixletter\ij^{L,n}\hat{\solutionvector}_j^n
@@ -111,30 +135,30 @@ now the transformed quantities $\hat{\mathbf{\limitedfluxbound}}^\pm$
 and $\hat{\correctionfluxmatrix}$ are used instead of
 $\mathbf{\limitedfluxbound}^\pm$ and $\correctionfluxmatrix$:
 \begin{equation}
-  \hat{\correctionfluxletter}_i^{-,\componentindex} \equiv
-    \sum\limits_{j:\hat{\correctionfluxentry}\ij^\componentindex<0}
-    \hat{\correctionfluxentry}\ij^\componentindex \eqc \qquad
-  \hat{\correctionfluxletter}_i^{+,\componentindex} \equiv
-    \sum\limits_{j:\hat{\correctionfluxentry}\ij^\componentindex>0}
-    \hat{\correctionfluxentry}\ij^\componentindex \eqc
+  \hat{\correctionfluxletter}_i^{-,k} \equiv
+    \sum\limits_{j:\hat{\correctionfluxentry}\ij^k<0}
+    \hat{\correctionfluxentry}\ij^k \eqc \qquad
+  \hat{\correctionfluxletter}_i^{+,k} \equiv
+    \sum\limits_{j:\hat{\correctionfluxentry}\ij^k>0}
+    \hat{\correctionfluxentry}\ij^k \eqc
 \end{equation}
 \begin{equation}
-  \limiterletter_i^{\pm,\componentindex} \equiv\left\{
+  \hat{\limiterletter}_i^{\pm,k} \equiv\left\{
     \begin{array}{l l}
-      1 & \hat{\correctionfluxletter}_i^{\pm,\componentindex} = 0\\
-      \min\left(1,\frac{Q_i^{\pm,\componentindex}}
-        {\hat{\correctionfluxletter}_i^{\pm,\componentindex}}\right) &
-      \hat{\correctionfluxletter}_i^{\pm,\componentindex} \ne 0
+      1 & \hat{\correctionfluxletter}_i^{\pm,k} = 0\\
+      \min\left(1,\frac{\hat{\limitedfluxbound}_i^{\pm,k}}
+        {\hat{\correctionfluxletter}_i^{\pm,k}}\right) &
+      \hat{\correctionfluxletter}_i^{\pm,k} \ne 0
     \end{array}
   \right. \eqc
 \end{equation}
 \begin{equation}
-  \limiterletter\ij^\componentindex \equiv\left\{
+  \hat{\limiterletter}\ij^k \equiv\left\{
     \begin{array}{l l}
-      \min(L_i^{+,\componentindex},L_j^{-,\componentindex}) &
-        \hat{\correctionfluxentry}\ij^\componentindex \geq 0\\
-      \min(L_i^{-,\componentindex},L_j^{+,\componentindex}) &
-        \hat{\correctionfluxentry}\ij^\componentindex < 0
+      \min(\hat{L}_i^{+,k},\hat{L}_j^{-,k}) &
+        \hat{\correctionfluxentry}\ij^k \geq 0\\
+      \min(\hat{L}_i^{-,k},\hat{L}_j^{+,k}) &
+        \hat{\correctionfluxentry}\ij^k < 0
     \end{array}
   \right. \eqp
 \end{equation}
@@ -142,8 +166,13 @@ $\mathbf{\limitedfluxbound}^\pm$ and $\correctionfluxmatrix$:
 Kuzmin states that for the systems case, the limiting coefficients may require
 synchronization between the components, such as
 \begin{equation}
-  \limiterletter\ij^\componentindex \mapsfrom
-    \min\limits_k\limiterletter\ij^k \quad \forall\componentindex \eqp
+  \hat{\limiterletter}\ij^k \mapsfrom
+    \min\limits_{k'}\hat{\limiterletter}\ij^{k'} \quad \forall k \eqp
 \end{equation}
 Otherwise, antidiffusive fluxes in one component can violate the
 conditions of another component \cite{kuzmin_FCT}.
+
+After these limiting coefficients $\hat{\limitermatrix}\ij$ for the transformed
+system are computed, one simply uses $\limitermatrix\ij=\hat{\limitermatrix}\ij$
+in Equation \eqref{eq:fct_scheme_conservative} to solve for the FCT solution
+in the original variables.
