--- a/doc/dissertation/content/fct/limited_flux_bounds_theta.tex
+++ b/doc/dissertation/content/fct/limited_flux_bounds_theta.tex
@@ -3,8 +3,11 @@
   the following antidiffusion bounds $\limitedfluxbound_i^\pm$ correspond to the
   solution bounds
   $\solutionbound_i^-\le \solutionletter_i^{\timeindex+1}\le \solutionbound_i^+$:
-  \begin{subequations}
-  \begin{equation}\label{eq:antidiffusion_bounds_theta}
+  \begin{subequations}\label{eq:antidiffusion_bounds_theta}
+   \begin{equation}
+     \limitedfluxbound_i^- \leq \limitedfluxsumi \leq \limitedfluxbound_i^+ \eqc
+   \end{equation}
+  \begin{equation}
     \limitedfluxbound_i^\pm \equiv
      \pr{\frac{\lumpedmassentry}{\dt}+\theta\ssmatrixletter_{i,i}^L}
        \solutionbound_i^\pm
@@ -62,14 +65,16 @@
       + \pr{(1-\theta)\ssmatrixletter_{i,i}^L-\frac{\lumpedmassentry}{\dt}}
        \solutionletter_i^n
     +\sumjnoti \ssmatrixletter\ij^L \solutionletter_j^\theta
-    -\ssrhsletter_i^\theta\\
+    -\ssrhsletter_i^\theta
+     = \limitedfluxbound_i^-\\
    \le
      \pr{\frac{\lumpedmassentry}{\dt}+\theta\ssmatrixletter_{i,i}^L}
        \solutionletter_i^{n+1}
       + \pr{(1-\theta)\ssmatrixletter_{i,i}^L-\frac{\lumpedmassentry}{\dt}}
        \solutionletter_i^n
     +\sumjnoti \ssmatrixletter\ij^L \solutionletter_j^\theta
-    -\ssrhsletter_i^\theta\\
+    -\ssrhsletter_i^\theta
+     = \limitedfluxsumi\\
    \le
      \pr{\frac{\lumpedmassentry}{\dt}+\theta\ssmatrixletter_{i,i}^L}
        \solutionbound_i^+
@@ -77,10 +82,6 @@
        \solutionletter_i^n
     +\sumjnoti \ssmatrixletter\ij^L \solutionletter_j^\theta
     -\ssrhsletter_i^\theta
-   \eqc
+     = \limitedfluxbound_i^+ \eqp\qed
    \end{multline*}
-   which by substituting equations above gives
-   \[
-     \limitedfluxbound_i^-\le\limitedfluxsumi\le \limitedfluxbound_i^+ \eqp\qed
-   \]
 \end{proof}
