some work on introduction

--- a/doc/dissertation/chapter1.tex
+++ b/doc/dissertation/chapter1.tex
@@ -1,5 +1,6 @@
 \chapter{INTRODUCTION}
 
-%\section{Purpose}
-  \input{content/introduction/purpose}
-%\section{Previous Work}
+\section{Model Equations}
+  \input{content/introduction/model_equations}
+\section{Hyperbolic Conservation Law Equations}
+  \input{content/introduction/hyperbolic_intro}
