--- a/doc/dissertation/content/introduction/hyperbolic_intro.tex
+++ b/doc/dissertation/content/introduction/hyperbolic_intro.tex
@@ -16,7 +16,7 @@ lead to poor design choices, thus presenting significant safety concerns.
 The formation of spurious oscillations and negativities is a well-known issue
 in numerical discretizations of hyperbolic partial differential equations (PDEs), which
 include, for example, linear advection, Burger's equation, the inviscid Euler
-equations of gas dynamics, and the shallow water (or Saint-Venant) equations.
+equations of gas dynamics, and the shallow water equations.
 These PDEs result from manipulating the corresponding integral conservation law
 equations; however, these manipulations are only valid when the solution is
 smooth - in the presence of shocks, the PDE form breaks down
